--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <input type="button" value="Enter" onclick='addElToObj(autoObj, getInput("propertyId"), getInput("propertyValueId"))'> 
         
         <div>
-            <span>Show information about car</span>
+            <span>3. Show information about car</span>
             <input type="button" value="Enter" onclick="showObj(autoObj)">
         </div>
         <div>
-            <span>1. Add distance</span><input type="text" id="distanceId">
+            <span>4. Add distance</span><input type="text" id="distanceId">
             <span>Сounts the time it takes to cover the distance</span>
             <input type="button" value="Enter" onclick="calculateTime(autoObj['average speed'], getInput('distanceId'))">
         </div>
